--- a/index.html
+++ b/index.html
@@ -149,6 +149,23 @@
             <input
               type="radio"
               name="type"
+              value="lighting-app-example/esp32-h2"
+            />
+            Lighting App (Thread) for 
+            <a href="https://www.digikey.com/en/products/detail/espressif-systems/ESP32-H2-DEVKITM-1-N4/18109238"
+               >ESP32-H2-DevkitM-1</a
+            >
+            (<a
+              href="https://github.com/project-chip/connectedhomeip/tree/master/examples/lighting-app/esp32"
+              >source</a
+            >)
+          </label>
+        </li>
+        <li>
+          <label>
+            <input
+              type="radio"
+              name="type"
               value="light-switch-app-example/esp32-c3"
             />
             Light Switch App for
